Fixing Collapse priority classes (#94)

--- a/foundations/variables/grid.scss
+++ b/foundations/variables/grid.scss
@@ -22,5 +22,7 @@ $grid-gutter: $su;
 $grid-inner-padding: 1em;
 
 $grid-collapse-on: phone phone-land tablet desktop wide;
-$grid-collapse-below: b-phone-land b-tablet b-desktop b-wide b-ultrawide;
+// The order is inverse because the smaller sizes have priority over the bigger
+// ie. collapse-2-b-tablet has priority over collapse-3-b-wide
+$grid-collapse-below: b-ultrawide b-wide b-desktop b-tablet b-phone-land;
 $grid-collapse-above: a-phone a-phone-land a-tablet a-desktop a-wide;
